updating namespace to export flr() and get.gr.flr()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,11 @@ export(decurve)
 export(decurve2)
 export(deltavar2)
 export(fd2.central)
+export(flr)
 export(get.R2)
 export(get.decurve.tpc)
 export(get.gr)
+export(get.gr.flr)
 export(get.gr.lag)
 export(get.gr.lagsat)
 export(get.gr.sat)
