--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,11 +4,12 @@ Title: Tools for analyzing time series of microbial abundances to estimate growt
 Version: 0.0.0.9000
 Author: Colin T. Kremer
 Maintainer: Colin T. Kremer <kremerco@msu.edu>
-Description: Developed for applications to NSF Dimensions of Biodiviersity grant
+Description: Developed for applications to NSF Dimensions of Biodiversity grant
 Depends: R (>= 3.2.4), dplyr (>= 0.5.0)
 License: MIT + file LICENSE
 LazyData: TRUE
 RoxygenNote: 6.1.1
+Encoding: UTF-8
 Imports: dplyr,
     ggplot2,
     gridExtra,
