Updates to documentation to reflect changes to nbcurve and nbcurve.legacy functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,7 +20,7 @@ export(lag)
 export(lagsat)
 export(localslope)
 export(nbcurve)
-export(nbcurve2)
+export(nbcurve.legacy)
 export(sat)
 import(bbmle)
 import(emdbook)
