--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,8 @@ export(lagsat)
 export(localslope)
 export(nbcurve)
 export(nbcurve.legacy)
+export(plot.nbcurve.tpc)
+export(predict.nbcurve)
 export(sat)
 import(bbmle)
 import(emdbook)
