--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,7 +21,7 @@ export(lagsat)
 export(localslope)
 export(nbcurve)
 export(nbcurve.legacy)
-export(plot.nbcurve.tpc)
+export(plot.nbcurve)
 export(predict.nbcurve)
 export(sat)
 import(bbmle)
