updates and expansion of documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,7 +21,9 @@ export(lagsat)
 export(localslope)
 export(nbcurve)
 export(nbcurve.legacy)
+export(plot.decurve)
 export(plot.nbcurve)
+export(predict.decurve)
 export(predict.nbcurve)
 export(sat)
 import(bbmle)
