--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,14 +4,13 @@ Title: Tools for analyzing time series of microbial abundances to estimate growt
 Version: 0.1.0.9000
 Author: Colin T. Kremer
 Maintainer: Colin T. Kremer <kremerco@msu.edu>
-Description: Developed for applications to NSF Dimensions of Biodiversity grant
+Description: Developed for applications to NSF Dimensions of Biodiversity grant.
 Depends: R (>= 3.2.4), dplyr (>= 0.5.0)
 License: MIT + file LICENSE
 LazyData: TRUE
 RoxygenNote: 7.0.1
 Encoding: UTF-8
 Imports: bbmle,
-    dplyr,
     emdbook,
     ggplot2,
     gridExtra,
