Cleaning up dependencies. R CMD check only loads with base, so other default libraries (e.g., stats) are not available automatically. So, I added them as imports to the relevant functions, so they'll be incorporated into NAMESPACE and also added them as dependencies in DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,15 +13,18 @@ Encoding: UTF-8
 Imports: bbmle,
     emdbook,
     ggplot2,
+    graphics,
+    grDevices,
     gridExtra,
     MASS,
     minpack.lm,
     mgcv,
     mleTools,
     reshape2,
-    vegan,
+    stats,
     tidyr,
     tibble,
+    vegan,
     zoo
 Suggests: knitr,
     rmarkdown
