adding beginnings of unit testing for package

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,6 +26,8 @@ Imports: bbmle,
     tibble,
     vegan,
     zoo
-Suggests: knitr,
-    rmarkdown
+Suggests: 
+    knitr,
+    rmarkdown,
+    testthat (>= 2.1.0)
 VignetteBuilder: knitr
