changes to namespace reflecting more precise references to package dependencies

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,6 @@
 
 S3method(plot,decurve)
 S3method(plot,nbcurve)
-S3method(predict,decurve)
-S3method(predict,nbcurve)
 export(decurve)
 export(decurve2)
 export(deltavar2)
@@ -25,15 +23,24 @@ export(lagsat)
 export(localslope)
 export(nbcurve)
 export(nbcurve.legacy)
+export(predict.decurve)
+export(predict.nbcurve)
 export(sat)
 import(bbmle)
 import(dplyr)
 import(emdbook)
 import(ggplot2)
-import(grDevices)
 import(graphics)
 import(mgcv)
 import(minpack.lm)
 import(mleTools)
-import(stats)
 import(zoo)
+importFrom(grDevices,dev.off)
+importFrom(grDevices,pdf)
+importFrom(stats,D)
+importFrom(stats,abline)
+importFrom(stats,curve)
+importFrom(stats,lm)
+importFrom(stats,na.omit)
+importFrom(stats,uniroot)
+importFrom(stats,vcov)
