more attempts to clean up dependencies - need to distinguish between vcov in bbmle and stats

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,16 +30,16 @@ import(bbmle)
 import(dplyr)
 import(emdbook)
 import(ggplot2)
-import(graphics)
 import(mgcv)
 import(minpack.lm)
 import(mleTools)
 import(zoo)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
+importFrom(graphics,abline)
+importFrom(graphics,curve)
+importFrom(graphics,plot)
 importFrom(stats,D)
-importFrom(stats,abline)
-importFrom(stats,curve)
 importFrom(stats,lm)
 importFrom(stats,na.omit)
 importFrom(stats,uniroot)
