making function imports more specific

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,11 +34,14 @@ import(mgcv)
 import(minpack.lm)
 import(mleTools)
 import(zoo)
+importFrom(bbmle,mle2)
+importFrom(bbmle,vcov)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
 importFrom(graphics,abline)
 importFrom(graphics,curve)
 importFrom(graphics,plot)
+importFrom(stats,AIC)
 importFrom(stats,D)
 importFrom(stats,lm)
 importFrom(stats,na.omit)
