--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 S3method(plot,decurve)
 S3method(plot,nbcurve)
+S3method(predict,decurve)
+S3method(predict,nbcurve)
 export(decurve)
 export(decurve2)
 export(deltavar2)
@@ -23,27 +25,11 @@ export(lagsat)
 export(localslope)
 export(nbcurve)
 export(nbcurve.legacy)
-export(predict.decurve)
-export(predict.nbcurve)
 export(sat)
-import(bbmle)
 import(dplyr)
 import(emdbook)
 import(ggplot2)
 import(mgcv)
-import(minpack.lm)
 import(mleTools)
 import(zoo)
-importFrom(bbmle,mle2)
-importFrom(bbmle,vcov)
-importFrom(grDevices,dev.off)
-importFrom(grDevices,pdf)
-importFrom(graphics,abline)
-importFrom(graphics,curve)
-importFrom(graphics,plot)
-importFrom(stats,AIC)
-importFrom(stats,D)
-importFrom(stats,lm)
-importFrom(stats,na.omit)
-importFrom(stats,uniroot)
-importFrom(stats,vcov)
+importFrom(minpack.lm,nlsLM)
