working out importing mle2 class and associated methods from bbmle

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,5 +32,9 @@ import(ggplot2)
 import(methods)
 import(mgcv)
 import(zoo)
+importClassesFrom(bbmle,mle2)
 importFrom(minpack.lm,nls.lm.control)
 importFrom(minpack.lm,nlsLM)
+importMethodsFrom(bbmle,coef)
+importMethodsFrom(bbmle,predict)
+importMethodsFrom(bbmle,vcov)
