--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,5 +36,6 @@ importClassesFrom(bbmle,mle2)
 importFrom(minpack.lm,nls.lm.control)
 importFrom(minpack.lm,nlsLM)
 importMethodsFrom(bbmle,coef)
+importMethodsFrom(bbmle,logLik)
 importMethodsFrom(bbmle,predict)
 importMethodsFrom(bbmle,vcov)
