Adding function for fitting Monod curves to growth rate vs. nutrient concetration data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(get.gr.lag)
 export(get.gr.lagsat)
 export(get.gr.sat)
 export(get.growth.rate)
+export(get.monod)
 export(get.nbcurve.tpc)
 export(get.tlim)
 export(get.topt)
