added new functions with estimated intercept (collected under monod type 2 terminology)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(get.gr.lagsat)
 export(get.gr.sat)
 export(get.growth.rate)
 export(get.monod)
+export(get.monod2)
 export(get.nbcurve.tpc)
 export(get.tlim)
 export(get.topt)
@@ -27,6 +28,7 @@ export(lag)
 export(lagsat)
 export(localslope)
 export(monod_curve)
+export(monod_curve_type2)
 export(nbcurve)
 export(nbcurve.legacy)
 export(new_npc)
