--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(print,tpc)
 export(decurve)
 export(decurve2)
 export(deltavar2)
+export(ep_curve)
 export(fd2.central)
 export(flr)
 export(get.R2)
