Adding new TPC function (droopcurve) based on work by David Anderson

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,11 +9,13 @@ S3method(print,tpc)
 export(decurve)
 export(decurve2)
 export(deltavar2)
+export(droopcurve)
 export(ep_curve)
 export(fd2.central)
 export(flr)
 export(get.R2)
 export(get.decurve.tpc)
+export(get.droopcurve.tpc)
 export(get.gr)
 export(get.gr.flr)
 export(get.gr.lag)
