standardizing function naming scheme

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,15 +19,15 @@ export(flr)
 export(get.R2)
 export(get.decurve.tpc)
 export(get.droopcurve.tpc)
-export(get.ep)
+export(get.ep.lpc)
 export(get.gr)
 export(get.gr.flr)
 export(get.gr.lag)
 export(get.gr.lagsat)
 export(get.gr.sat)
 export(get.growth.rate)
-export(get.monod)
-export(get.monod2)
+export(get.monod.npc)
+export(get.monod2.npc)
 export(get.nbcurve.tpc)
 export(get.tlim)
 export(get.topt)
